--- a/static/style.css
+++ b/static/style.css
@@ -1,32 +1,105 @@
+*{
+	margin:0px;
+	padding:0px;
+
+}
+
+body{
+	background-color: rgba(250, 250, 250, 1);
+
+
+}
+
+a{text-decoration: none;}
+a:link{color: rgba(49,15,27,0.6);}
+a:hover {color:#000000;}
+a:visited {color:rgba(180,180,180,1);}
+
+img {
+	max-width: 100%;
+	max-height: 100%;
+}
 
 .container {
+
   max-width: 960px; /*设置最大宽度为固定值*/
   margin: 0 auto;  /*设置内部子块元素左右居中*/
 }
 .header {
-  height: 50px;  /*只需设置高度,宽度继承父元素*/
-  background-color: #21FF80;
+  height: 20px;
+	width: 100%; /*只需设置高度,宽度继承父元素*/
+
 }
-.main {
-  height: 600px;  /*只需设置高度,宽度继承父元素*/
-  background-color: #80007F;
+#main {
+
+  height: auto;
+	width: 100%;/*只需设置高度,宽度继承父元素*/
+	overflow: hidden;
 }
-.footer {
-  height: 50px;  /*只需设置高度,宽度继承父元素*/
-  background-color: #21FF06;
+
+
+
+.contents{
+	float: left;
+	width: 100%;
+	height: 60px;
+}
+
+.contents p{
+	margin: 0 15px;
+	font-size: 30px;
+	width: auto;
+	float: left;
+
 }
 
 .box{
-  height: 160px;
-  background-color: #66ccff;
+
+  float: left;
+	height:270px;
+	width:22%;
+	margin:8px;
+	border-radius:2em;
+	background-color: #ffffff;
+
+
+
+	/* line-height:100px; */
+}
+.mbox{
+	margin:  20px 0 0;
+	height: 200px;
 }
 
-.mbox{
-  height: 60px;
-  background-color: #22222;
+.box:hover{
+	border-radius:2em;
+	box-shadow:6px 3px 12px rgba(29,15,27,0.1);
+}
+
+.mimg{
+	width: 100%;
+	height: 200px;
 }
 
 .name{
-  height: 30px;
-  background-color: #66666;
+	margin: 0 auto;
+	width: 80%;
+	height: 30px;
+	font-size:18px;
+	font-family:Microsoft Yahei;
+	text-align:center;
+	overflow:hidden; //超出的文本隐藏
+	text-overflow: ellipsis;
+
+
+}
+.name a {
+
+	white-space:nowrap;
+}
+
+.footer {
+  height: 50px;  /*只需设置高度,宽度继承父元素*/
+  background-color: rgba(#f2f1f1, 0.98);
+	width: 100%;
 }
